--- a/sass/includes/960/grid/global.sass
+++ b/sass/includes/960/grid/global.sass
@@ -25,18 +25,30 @@
   :margin-left 10px
   :margin-right 10px
 
-.container_12 .grid_3,
-.container_16 .grid_4
-  :width 220px
 
-.container_12 .grid_6,
-.container_16 .grid_8
-  :width 460px
+.container_12
+  .grid_3
+    :width 220px
 
-.container_12 .grid_9,
-.container_16 .grid_12
-  :width 700px
+  .grid_6
+    :width 460px
 
-.container_12 .grid_12,
-.container_16 .grid_16
-  :width 940px
+  .grid_9
+    :width 700px
+
+  .grid_12
+    :width 940px
+  
+
+.container_16
+  .grid_4
+    :width 220px
+
+  .grid_8
+    :width 460px
+
+  .grid_12
+    :width 700px
+
+  .grid_16
+    :width 940px
