--- a/sass/includes/960/prefix/12.sass
+++ b/sass/includes/960/prefix/12.sass
@@ -4,26 +4,27 @@
   
   Licensed under GPL and MIT.
 
-.container_12 .prefix_1
-  :padding-left 80px
+.container_12
+  .prefix_1
+    :padding-left 80px
 
-.container_12 .prefix_2
-  :padding-left 160px
+  .prefix_2
+    :padding-left 160px
 
-.container_12 .prefix_4
-  :padding-left 320px
+  .prefix_4
+    :padding-left 320px
 
-.container_12 .prefix_5
-  :padding-left 400px
+  .prefix_5
+    :padding-left 400px
 
-.container_12 .prefix_7
-  :padding-left 560px
+  .prefix_7
+    :padding-left 560px
 
-.container_12 .prefix_8
-  :padding-left 640px
+  .prefix_8
+    :padding-left 640px
 
-.container_12 .prefix_10
-  :padding-left 800px
+  .prefix_10
+    :padding-left 800px
 
-.container_12 .prefix_11
-  :padding-left 880px
+  .prefix_11
+    :padding-left 880px
