--- a/sass/includes/960/suffix/12.sass
+++ b/sass/includes/960/suffix/12.sass
@@ -4,26 +4,27 @@
   
   Licensed under GPL and MIT.
 
-.container_12 .suffix_1
-  :padding-right 80px
+.container_12
+  .suffix_1
+    :padding-right 80px
 
-.container_12 .suffix_2
-  :padding-right 160px
+  .suffix_2
+    :padding-right 160px
 
-.container_12 .suffix_4
-  :padding-right 320px
+  .suffix_4
+    :padding-right 320px
 
-.container_12 .suffix_5
-  :padding-right 400px
+  .suffix_5
+    :padding-right 400px
 
-.container_12 .suffix_7
-  :padding-right 560px
+  .suffix_7
+    :padding-right 560px
 
-.container_12 .suffix_8
-  :padding-right 640px
+  .suffix_8
+    :padding-right 640px
 
-.container_12 .suffix_10
-  :padding-right 800px
+  .suffix_10
+    :padding-right 800px
 
-.container_12 .suffix_11
-  :padding-right 880px
+  .suffix_11
+    :padding-right 880px
