--- a/sass/includes/960/suffix/global.sass
+++ b/sass/includes/960/suffix/global.sass
@@ -4,14 +4,23 @@
   
   Licensed under GPL and MIT.
 
-.container_12 .suffix_3,
-.container_16 .suffix_4
-  :padding-right 240px
+.container_12
+  .suffix_3
+    :padding-left 240px
 
-.container_12 .suffix_6,
-.container_16 .suffix_8
-  :padding-right 480px
+  .suffix_6
+    :padding-left 480px
 
-.container_12 .suffix_9,
-.container_16 .suffix_12
-  :padding-right 720px
+  .suffix_9
+    :padding-left 720px
+  
+
+.container_16
+  .suffix_4
+    :padding-left 240px
+
+  .suffix_8
+    :padding-left 480px
+
+  .suffix_12
+    :padding-left 720px
