--- a/sass/includes/960/grid/12.sass
+++ b/sass/includes/960/grid/12.sass
@@ -4,26 +4,27 @@
   
   Licensed under GPL and MIT.
 
-.container_12 .grid_1
-  :width 60px
+.container_12
+  .grid_1
+    :width 60px
 
-.container_12 .grid_2
-  :width 140px
+  .grid_2
+    :width 140px
 
-.container_12 .grid_4
-  :width 300px
+  .grid_4
+    :width 300px
 
-.container_12 .grid_5
-  :width 380px
+  .grid_5
+    :width 380px
 
-.container_12 .grid_7
-  :width 540px
+  .grid_7
+    :width 540px
 
-.container_12 .grid_8
-  :width 620px
+  .grid_8
+    :width 620px
 
-.container_12 .grid_10
-  :width 780px
+  .grid_10
+    :width 780px
 
-.container_12 .grid_11
-  :width 860px
+  .grid_11
+    :width 860px
