--- a/sass/includes/960/grid/16.sass
+++ b/sass/includes/960/grid/16.sass
@@ -4,38 +4,39 @@
   
   Licensed under GPL and MIT.
 
-.container_16 .grid_1
-  :width 40px
+.container_16
+  .grid_1
+    :width 40px
 
-.container_16 .grid_2
-  :width 100px
+  .grid_2
+    :width 100px
 
-.container_16 .grid_3
-  :width 160px
+  .grid_3
+    :width 160px
 
-.container_16 .grid_5
-  :width 280px
+  .grid_5
+    :width 280px
 
-.container_16 .grid_6
-  :width 340px
+  .grid_6
+    :width 340px
 
-.container_16 .grid_7
-  :width 400px
+  .grid_7
+    :width 400px
 
-.container_16 .grid_9
-  :width 520px
+  .grid_9
+    :width 520px
 
-.container_16 .grid_10
-  :width 580px
+  .grid_10
+    :width 580px
 
-.container_16 .grid_11
-  :width 640px
+  .grid_11
+    :width 640px
 
-.container_16 .grid_13
-  :width 760px
+  .grid_13
+    :width 760px
 
-.container_16 .grid_14
-  :width 820px
+  .grid_14
+    :width 820px
 
-.container_16 .grid_15
-  :width 880px
+  .grid_15
+    :width 880px
