--- a/sass/includes/960/prefix/16.sass
+++ b/sass/includes/960/prefix/16.sass
@@ -4,38 +4,39 @@
   
   Licensed under GPL and MIT.
 
-.container_16 .prefix_1
-  :padding-left 60px
+.container_16
+  .prefix_1
+    :padding-left 60px
 
-.container_16 .prefix_2
-  :padding-left 120px
+  .prefix_2
+    :padding-left 120px
 
-.container_16 .prefix_3
-  :padding-left 180px
+  .prefix_3
+    :padding-left 180px
 
-.container_16 .prefix_5
-  :padding-left 300px
+  .prefix_5
+    :padding-left 300px
 
-.container_16 .prefix_6
-  :padding-left 360px
+  .prefix_6
+    :padding-left 360px
 
-.container_16 .prefix_7
-  :padding-left 420px
+  .prefix_7
+    :padding-left 420px
 
-.container_16 .prefix_9
-  :padding-left 540px
+  .prefix_9
+    :padding-left 540px
 
-.container_16 .prefix_10
-  :padding-left 600px
+  .prefix_10
+    :padding-left 600px
 
-.container_16 .prefix_11
-  :padding-left 660px
+  .prefix_11
+    :padding-left 660px
 
-.container_16 .prefix_13
-  :padding-left 780px
+  .prefix_13
+    :padding-left 780px
 
-.container_16 .prefix_14
-  :padding-left 840px
+  .prefix_14
+    :padding-left 840px
 
-.container_16 .prefix_15
-  :padding-left 900px
+  .prefix_15
+    :padding-left 900px
