--- a/sass/includes/960/prefix/global.sass
+++ b/sass/includes/960/prefix/global.sass
@@ -4,14 +4,23 @@
   
   Licensed under GPL and MIT.
 
-.container_12 .prefix_3,
-.container_16 .prefix_4
-  :padding-left 240px
+.container_12
+  .prefix_3
+    :padding-left 240px
 
-.container_12 .prefix_6,
-.container_16 .prefix_8
-  :padding-left 480px
+  .prefix_6
+    :padding-left 480px
 
-.container_12 .prefix_9,
-.container_16 .prefix_12
-  :padding-left 720px
+  .prefix_9
+    :padding-left 720px
+  
+
+.container_16
+  .prefix_4
+    :padding-left 240px
+
+  .prefix_8
+    :padding-left 480px
+
+  .prefix_12
+    :padding-left 720px
