--- a/sass/includes/960/suffix/16.sass
+++ b/sass/includes/960/suffix/16.sass
@@ -4,38 +4,39 @@
   
   Licensed under GPL and MIT.
 
-.container_16 .suffix_1
-  :padding-right 60px
+.container_16
+  .suffix_1
+    :padding-right 60px
 
-.container_16 .suffix_2
-  :padding-right 120px
+  .suffix_2
+    :padding-right 120px
 
-.container_16 .suffix_3
-  :padding-right 180px
+  .suffix_3
+    :padding-right 180px
 
-.container_16 .suffix_5
-  :padding-right 300px
+  .suffix_5
+    :padding-right 300px
 
-.container_16 .suffix_6
-  :padding-right 360px
+  .suffix_6
+    :padding-right 360px
 
-.container_16 .suffix_7
-  :padding-right 420px
+  .suffix_7
+    :padding-right 420px
 
-.container_16 .suffix_9
-  :padding-right 540px
+  .suffix_9
+    :padding-right 540px
 
-.container_16 .suffix_10
-  :padding-right 600px
+  .suffix_10
+    :padding-right 600px
 
-.container_16 .suffix_11
-  :padding-right 660px
+  .suffix_11
+    :padding-right 660px
 
-.container_16 .suffix_13
-  :padding-right 780px
+  .suffix_13
+    :padding-right 780px
 
-.container_16 .suffix_14
-  :padding-right 840px
+  .suffix_14
+    :padding-right 840px
 
-.container_16 .suffix_15
-  :padding-right 900px
+  .suffix_15
+    :padding-right 900px
