Move these styles to where they more naturally fit.

--- a/sass/960/grid/_12.sass
+++ b/sass/960/grid/_12.sass
@@ -11,11 +11,17 @@
   .grid_2
     :width 140px
 
+  .grid_3
+    :width 220px
+
   .grid_4
     :width 300px
 
   .grid_5
     :width 380px
+
+  .grid_6
+    :width 460px
 
   .grid_7
     :width 540px
@@ -23,8 +29,14 @@
   .grid_8
     :width 620px
 
+  .grid_9
+    :width 700px
+
   .grid_10
     :width 780px
 
   .grid_11
     :width 860px
+
+  .grid_12
+    :width 940px
