--- a/sass/960/grid/_16.sass
+++ b/sass/960/grid/_16.sass
@@ -14,6 +14,9 @@
   .grid_3
     :width 160px
 
+  .grid_4
+    :width 220px
+
   .grid_5
     :width 280px
 
@@ -22,6 +25,9 @@
 
   .grid_7
     :width 400px
+
+  .grid_8
+    :width 460px
 
   .grid_9
     :width 520px
@@ -32,6 +38,9 @@
   .grid_11
     :width 640px
 
+  .grid_12
+    :width 700px
+
   .grid_13
     :width 760px
 
@@ -40,3 +49,6 @@
 
   .grid_15
     :width 880px
+
+  .grid_16
+    :width 940px
