Refactored the Grid code using mixins. This resulted in no changes to the emitted CSS.

--- a/sass/960/grid/_children.sass
+++ b/sass/960/grid/_children.sass
@@ -4,8 +4,10 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .alpha
-  :margin-left 0
+  +alpha
 
 .omega
-  :margin-right 0
+  +omega
