--- a/sass/960/grid/_containers.sass
+++ b/sass/960/grid/_containers.sass
@@ -4,8 +4,8 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .container_12,
 .container_16
-  :margin-left auto
-  :margin-right auto
-  :width 960px
+  +grid-container
