--- a/sass/960/grid/_global.sass
+++ b/sass/960/grid/_global.sass
@@ -4,6 +4,8 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .grid_1,
 .grid_2,
 .grid_3,
@@ -20,7 +22,4 @@
 .grid_14,
 .grid_15,
 .grid_16
-  :display inline
-  :float left
-  :margin-left 10px
-  :margin-right 10px
+  +grid-unit-base
