--- a/sass/960/grid/prefix/_12.sass
+++ b/sass/960/grid/prefix/_12.sass
@@ -4,27 +4,8 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .container_12
-  .prefix_1
-    :padding-left 80px
+  +grid-prefixes(12)
 
-  .prefix_2
-    :padding-left 160px
-
-  .prefix_4
-    :padding-left 320px
-
-  .prefix_5
-    :padding-left 400px
-
-  .prefix_7
-    :padding-left 560px
-
-  .prefix_8
-    :padding-left 640px
-
-  .prefix_10
-    :padding-left 800px
-
-  .prefix_11
-    :padding-left 880px
