--- a/sass/960/grid/prefix/_16.sass
+++ b/sass/960/grid/prefix/_16.sass
@@ -4,39 +4,7 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .container_16
-  .prefix_1
-    :padding-left 60px
-
-  .prefix_2
-    :padding-left 120px
-
-  .prefix_3
-    :padding-left 180px
-
-  .prefix_5
-    :padding-left 300px
-
-  .prefix_6
-    :padding-left 360px
-
-  .prefix_7
-    :padding-left 420px
-
-  .prefix_9
-    :padding-left 540px
-
-  .prefix_10
-    :padding-left 600px
-
-  .prefix_11
-    :padding-left 660px
-
-  .prefix_13
-    :padding-left 780px
-
-  .prefix_14
-    :padding-left 840px
-
-  .prefix_15
-    :padding-left 900px
+  +grid-prefixes(12)
