--- a/sass/960/grid/suffix/_12.sass
+++ b/sass/960/grid/suffix/_12.sass
@@ -4,27 +4,7 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .container_12
-  .suffix_1
-    :padding-right 80px
-
-  .suffix_2
-    :padding-right 160px
-
-  .suffix_4
-    :padding-right 320px
-
-  .suffix_5
-    :padding-right 400px
-
-  .suffix_7
-    :padding-right 560px
-
-  .suffix_8
-    :padding-right 640px
-
-  .suffix_10
-    :padding-right 800px
-
-  .suffix_11
-    :padding-right 880px
+  +grid-suffixes(12)
