--- a/sass/960/grid/_16.sass
+++ b/sass/960/grid/_16.sass
@@ -4,51 +4,7 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .container_16
-  .grid_1
-    :width 40px
-
-  .grid_2
-    :width 100px
-
-  .grid_3
-    :width 160px
-
-  .grid_4
-    :width 220px
-
-  .grid_5
-    :width 280px
-
-  .grid_6
-    :width 340px
-
-  .grid_7
-    :width 400px
-
-  .grid_8
-    :width 460px
-
-  .grid_9
-    :width 520px
-
-  .grid_10
-    :width 580px
-
-  .grid_11
-    :width 640px
-
-  .grid_12
-    :width 700px
-
-  .grid_13
-    :width 760px
-
-  .grid_14
-    :width 820px
-
-  .grid_15
-    :width 880px
-
-  .grid_16
-    :width 940px
+  +grids(16)
