--- a/sass/960/grid/suffix/_16.sass
+++ b/sass/960/grid/suffix/_16.sass
@@ -4,39 +4,7 @@
   
   Licensed under GPL and MIT.
 
+@import base.sass
+
 .container_16
-  .suffix_1
-    :padding-right 60px
-
-  .suffix_2
-    :padding-right 120px
-
-  .suffix_3
-    :padding-right 180px
-
-  .suffix_5
-    :padding-right 300px
-
-  .suffix_6
-    :padding-right 360px
-
-  .suffix_7
-    :padding-right 420px
-
-  .suffix_9
-    :padding-right 540px
-
-  .suffix_10
-    :padding-right 600px
-
-  .suffix_11
-    :padding-right 660px
-
-  .suffix_13
-    :padding-right 780px
-
-  .suffix_14
-    :padding-right 840px
-
-  .suffix_15
-    :padding-right 900px
+  +grid-suffixes(16)
