Converted 960 repo into a Compass plugin.

--- a/templates/project/grid.sass
+++ b/templates/project/grid.sass
@@ -4,8 +4,8 @@
   
   Licensed under GPL and MIT.
 
-@import grid/base.sass
-@import grid/clear.sass
+@import compass/utilities/reset.sass
+@import 960/grid.sass
 
 .container_12
   +grid-system(12)
