--- a/templates/standalone/text.sass
+++ b/templates/standalone/text.sass
@@ -3,7 +3,8 @@
   Learn more ~ http://960.gs/
   
   Licensed under GPL and MIT.
+  
 
-@import text/basic.sass
-@import text/headings.sass
-@import text/spacing.sass
+@import 960/text.sass
+
+=text
