Fix some broken imports.

--- a/templates/project/grid.sass
+++ b/templates/project/grid.sass
@@ -4,7 +4,7 @@
   
   Licensed under GPL and MIT.
 
-@import compass/utilities/reset.sass
+@import compass/utilities/general/reset.sass
 @import 960/grid.sass
 
 .container_12
