--- a/sass/960/_grid.sass
+++ b/sass/960/_grid.sass
@@ -1,12 +1,13 @@
 !ninesixty_gutter_width ||= 20px
 !ninesixty_grid_width ||= 960px
+!ninesixty_columns ||= 12
 
 =grid-container
   :margin-left auto
   :margin-right auto
   :width= !ninesixty_grid_width
 
-=grid-width(!n, !cols, !gutter_width = !ninesixty_gutter_width)
+=grid-width(!n, !cols = !ninesixty_columns, !gutter_width = !ninesixty_gutter_width)
   :width= (!ninesixty_grid_width / !cols) * !n - !gutter_width
 
 =grid-unit-base(!gutter_width = !ninesixty_gutter_width)
@@ -16,7 +17,7 @@
     :left= !gutter_width / 2
     :right= !gutter_width / 2
 
-=grid(!n, !cols, !gutter_width = !ninesixty_gutter_width)
+=grid(!n, !cols = !ninesixty_columns, !gutter_width = !ninesixty_gutter_width)
   +grid-unit-base(!gutter_width)
   +grid-width(!n, !cols, !gutter_width)
 
@@ -26,25 +27,25 @@
 =omega
   :margin-right 0
 
-=grids(!cols, !gutter_width = !ninesixty_gutter_width)
+=grids(!cols = !ninesixty_columns, !gutter_width = !ninesixty_gutter_width)
   #{enumerate(".grid_",1,!cols)}
     +grid-unit-base
   @for !n from 1 through !cols
     .grid_#{!n}
       +grid-width(!n, !cols, !gutter_width)
 
-=grid-prefix(!n, !cols)
+=grid-prefix(!n, !cols = !ninesixty_columns)
   :padding-left= (!ninesixty_grid_width / !cols) * !n
 
-=grid-prefixes(!cols)
+=grid-prefixes(!cols = !ninesixty_columns)
   @for !n from 1 through !cols - 1
     .prefix_#{!n}
       +grid-prefix(!n, !cols)
 
-=grid-suffix(!n, !cols)
+=grid-suffix(!n, !cols = !ninesixty_columns)
   :padding-right= (!ninesixty_grid_width / !cols) * !n
 
-=grid-suffixes(!cols)
+=grid-suffixes(!cols = !ninesixty_columns)
   @for !n from 1 through !cols - 1
     .suffix_#{!n}
       +grid-suffix(!n, !cols)
@@ -55,7 +56,7 @@
   .omega
     +omega
 
-=grid-system(!cols)
+=grid-system(!cols = !ninesixty_columns)
   +grid-container
   +grids(!cols)
   +grid-prefixes(!cols)
