--- a/sass/960/_text.sass
+++ b/sass/960/_text.sass
@@ -1,46 +1,34 @@
-!ninesixty_font_family ||= "Helvetica, Arial, 'Liberation Sans', FreeSans, sans-serif"
+$ninesixty-font-family: unquote("Helvetica, Arial, 'Liberation Sans', FreeSans, sans-serif") !default
 
-=text(!font_family = !ninesixty_font_family)
+=text($font-family: $ninesixty-font-family)
   body
-    :font= "13px/1.5" !font_family
-
+    font: unquote("13px/1.5") $font-family
   a:focus
-    :outline 1px dotted invert
-
+    outline: 1px dotted invert
   hr
-    :border-color #ccc
-    :border-style solid
-    :border-width 1px 0 0
-    :clear both
-    :height 0
-
+    border-color: #cccccc
+    border-style: solid
+    border-width: 1px 0 0
+    clear: both
+    height: 0
   h1
-    :font-size 25px
-
+    font-size: 25px
   h2
-    :font-size 23px
-
+    font-size: 23px
   h3
-    :font-size 21px
-
+    font-size: 21px
   h4
-    :font-size 19px
-
+    font-size: 19px
   h5
-    :font-size 17px
-
+    font-size: 17px
   h6
-    :font-size 15px
-
+    font-size: 15px
   ol
-    :list-style decimal
-
+    list-style: decimal
   ul
-    :list-style square
-
+    list-style: square
   li
-    :margin-left 30px
-
+    margin-left: 30px
   p,
   dl,
   hr,
@@ -56,4 +44,4 @@
   table,
   address,
   fieldset
-    :margin-bottom 20px
+    margin-bottom: 20px
