--- a/templates/project/text.sass
+++ b/templates/project/text.sass
@@ -1,10 +1,8 @@
-/*
-  960 Grid System ~ Text CSS.
-  Learn more ~ http://960.gs/
-  
-  Licensed under GPL and MIT.
-  
+/* 960 Grid System ~ Text CSS.
+ * Learn more ~ http://960.gs/
+ * *
+ * Licensed under GPL and MIT.
 
-@import 960/text.sass
+@import 960/text
 
 +text
