--- a/templates/project/grid.sass
+++ b/templates/project/grid.sass
@@ -4,7 +4,7 @@
  * Licensed under GPL and MIT.
 
 @import compass/reset
-@import 960/grids
+@import 960/grid
 
 // The following generates the default grids provided by the css version of 960.gs
 .container_12
