--- a/stylesheets/960/_grid.sass
+++ b/stylesheets/960/_grid.sass
@@ -61,11 +61,19 @@ $ninesixty-columns: 12 !default
 =grid-move-base
   position: relative
 
-=grid-push($n, $cols: $ninesixty-columns)
+=grid-move-push($n, $cols)
   left: ($ninesixty-grid-width / $cols) * $n
 
-=grid-pull($n, $cols: $ninesixty-columns)
+=grid-move-pull($n, $cols)
   left: -($ninesixty-grid-width / $cols) * $n
+
+=grid-push($n, $cols: $ninesixty-columns)
+  +grid-move-base
+  +grid-move-push($n, $cols)
+
+=grid-pull($n, $cols: $ninesixty-columns)
+  +grid-move-base
+  +grid-move-pull($n, $cols)
 
 =grid-movements($cols: $ninesixty-columns)
   #{enumerate(".push", 1, $cols, "_")},
@@ -73,9 +81,9 @@ $ninesixty-columns: 12 !default
     +grid-move-base
   @for $n from 1 through $cols
     .push_#{$n}
-      +grid-push($n, $cols)
+      +grid-move-push($n, $cols)
     .pull_#{$n}
-      +grid-pull($n, $cols)
+      +grid-move-pull($n, $cols)
 
 =grid-system($cols: $ninesixty-columns)
   +grid-container
