--- a/stylesheets/960/_grid.sass
+++ b/stylesheets/960/_grid.sass
@@ -4,6 +4,8 @@ $ninesixty-grid-width: 960px !default
 
 $ninesixty-columns: 12 !default
 
+$ninesixty-class-separator: "_" !default
+
 =grid-container
   margin-left: auto
   margin-right: auto
@@ -30,10 +32,10 @@ $ninesixty-columns: 12 !default
   margin-right: 0
 
 =grids($cols: $ninesixty-columns, $gutter-width: $ninesixty-gutter-width)
-  #{enumerate(".grid", 1, $cols, "_")}
+  #{enumerate(".grid", 1, $cols, $ninesixty-class-separator)}
     +grid-unit-base
   @for $n from 1 through $cols
-    .grid_#{$n}
+    .grid#{$ninesixty-class-separator}#{$n}
       +grid-width($n, $cols, $gutter-width)
 
 =grid-prefix($n, $cols: $ninesixty-columns)
@@ -41,7 +43,7 @@ $ninesixty-columns: 12 !default
 
 =grid-prefixes($cols: $ninesixty-columns)
   @for $n from 1 through $cols - 1
-    .prefix_#{$n}
+    .prefix#{$ninesixty-class-separator}#{$n}
       +grid-prefix($n, $cols)
 
 =grid-suffix($n, $cols: $ninesixty-columns)
@@ -49,7 +51,7 @@ $ninesixty-columns: 12 !default
 
 =grid-suffixes($cols: $ninesixty-columns)
   @for $n from 1 through $cols - 1
-    .suffix_#{$n}
+    .suffix#{$ninesixty-class-separator}#{$n}
       +grid-suffix($n, $cols)
 
 =grid-children
@@ -76,13 +78,13 @@ $ninesixty-columns: 12 !default
   +grid-move-pull($n, $cols)
 
 =grid-movements($cols: $ninesixty-columns)
-  #{enumerate(".push", 1, $cols, "_")},
-  #{enumerate(".pull", 1, $cols, "_")}
+  #{enumerate(".push", 1, $cols, $ninesixty-class-separator)},
+  #{enumerate(".pull", 1, $cols, $ninesixty-class-separator)}
     +grid-move-base
   @for $n from 1 through $cols
-    .push_#{$n}
+    .push#{$ninesixty-class-separator}#{$n}
       +grid-move-push($n, $cols)
-    .pull_#{$n}
+    .pull#{$ninesixty-class-separator}#{$n}
       +grid-move-pull($n, $cols)
 
 =grid-system($cols: $ninesixty-columns)
