--- a/stylesheets/960/_grid.sass
+++ b/stylesheets/960/_grid.sass
@@ -33,7 +33,7 @@ $ninesixty-class-separator: "_" !default
 
 =grids($cols: $ninesixty-columns, $gutter-width: $ninesixty-gutter-width)
   #{enumerate(".grid", 1, $cols, $ninesixty-class-separator)}
-    +grid-unit-base
+    +grid-unit-base($gutter-width)
   @for $n from 1 through $cols
     .grid#{$ninesixty-class-separator}#{$n}
       +grid-width($n, $cols, $gutter-width)
