change =grid-system mixin to create .container_XX class

--- a/stylesheets/960/_grid.sass
+++ b/stylesheets/960/_grid.sass
@@ -88,9 +88,10 @@ $ninesixty-class-separator: "_" !default
       +grid-move-pull($n, $cols)
 
 =grid-system($cols: $ninesixty-columns)
-  +grid-container
-  +grids($cols)
-  +grid-prefixes($cols)
-  +grid-suffixes($cols)
-  +grid-children
-  +grid-movements($cols)
+  .container#{$ninesixty-class-separator}#{$cols}
+    +grid-container
+    +grids($cols)
+    +grid-prefixes($cols)
+    +grid-suffixes($cols)
+    +grid-children
+    +grid-movements($cols)
