Add grid-system-complete mixin which includes the .container_x class.

--- a/stylesheets/960/_grid.sass
+++ b/stylesheets/960/_grid.sass
@@ -94,3 +94,7 @@ $ninesixty-class-separator: "_" !default
   +grid-suffixes($cols)
   +grid-children
   +grid-movements($cols)
+
+=grid-system-complete($cols: $ninesixty-columns)
+  .container#{$ninesixty-class-separator}#{$cols}
+    +grid-system($cols)
